[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/img/sprites/Player/Blasto_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://assets/Scripts/Player/BulletGrenade.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 23.0

[node name="BulletRifle" type="Node2D"]
position = Vector2( 0, 1 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -41, 2 )
rotation = 3.14159
scale = Vector2( 2.14571, 1.88281 )
texture = ExtResource( 1 )
hframes = 3
vframes = 6
frame = 14

[node name="BulletArea" type="Area2D" parent="."]
position = Vector2( 0, -1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletArea"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="area_entered" from="BulletArea" to="." method="_on_BulletArea_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
